// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`#loopCap changes the default cap for subsequent loops > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "loop",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "loop",
        },
      ],
      "instruction": "module",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 500,
        },
      ],
      "instruction": "#loopCap",
      "isBlockPrologue": true,
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "counter",
          "type": "identifier",
          "value": "&counter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 1,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "add",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 10,
      "lineNumberBeforeMacroExpansion": 10,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 12,
      "lineNumberBeforeMacroExpansion": 12,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`#loopCap changes the default cap for subsequent loops > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 500
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 0
        i32.const 0
        i32.load
        i32.const 1
        i32.add
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "test" (func 0)))
"
`;

exports[`#loopCap changes the default cap for subsequent loops > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "counter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "counter",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;

exports[`loop cap of 0 causes loop to exit immediately on first guard check > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "loop",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "loop",
        },
      ],
      "instruction": "module",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 0,
        },
      ],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "counter",
          "type": "identifier",
          "value": "&counter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 1,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "add",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 11,
      "lineNumberBeforeMacroExpansion": 11,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`loop cap of 0 causes loop to exit immediately on first guard check > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 0
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 0
        i32.const 0
        i32.load
        i32.const 1
        i32.add
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "test" (func 0)))
"
`;

exports[`loop cap of 0 causes loop to exit immediately on first guard check > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "counter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "counter",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;

exports[`loop with explicit cap argument overrides #loopCap > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "loop",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "loop",
        },
      ],
      "instruction": "module",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 500,
        },
      ],
      "instruction": "#loopCap",
      "isBlockPrologue": true,
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 12,
        },
      ],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "counter",
          "type": "identifier",
          "value": "&counter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 1,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "add",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 10,
      "lineNumberBeforeMacroExpansion": 10,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 12,
      "lineNumberBeforeMacroExpansion": 12,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`loop with explicit cap argument overrides #loopCap > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 12
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 0
        i32.const 0
        i32.load
        i32.const 1
        i32.add
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "test" (func 0)))
"
`;

exports[`loop with explicit cap argument overrides #loopCap > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "counter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "counter",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;

exports[`loop with explicit cap argument overrides default cap > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "loop",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "loop",
        },
      ],
      "instruction": "module",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 32,
        },
      ],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "counter",
          "type": "identifier",
          "value": "&counter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 1,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "add",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 11,
      "lineNumberBeforeMacroExpansion": 11,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`loop with explicit cap argument overrides default cap > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 32
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 0
        i32.const 0
        i32.load
        i32.const 1
        i32.add
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "test" (func 0)))
"
`;

exports[`loop with explicit cap argument overrides default cap > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "counter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "counter",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;

exports[`nested loops resolve their own caps independently > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "loop",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "loop",
        },
      ],
      "instruction": "module",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "outerCounter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "innerCounter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 5,
        },
      ],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "outerCounter",
          "type": "identifier",
          "value": "&outerCounter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "outerCounter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 1,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "add",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 3,
        },
      ],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 11,
      "lineNumberBeforeMacroExpansion": 11,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "innerCounter",
          "type": "identifier",
          "value": "&innerCounter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 12,
      "lineNumberBeforeMacroExpansion": 12,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "innerCounter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 13,
      "lineNumberBeforeMacroExpansion": 13,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 1,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 14,
      "lineNumberBeforeMacroExpansion": 14,
    },
    {
      "arguments": [],
      "instruction": "add",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 15,
      "lineNumberBeforeMacroExpansion": 15,
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 16,
      "lineNumberBeforeMacroExpansion": 16,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 17,
      "lineNumberBeforeMacroExpansion": 17,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 19,
      "lineNumberBeforeMacroExpansion": 19,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 21,
      "lineNumberBeforeMacroExpansion": 21,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "outerCounter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "innerCounter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 2,
      "lineNumberBeforeMacroExpansion": 2,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`nested loops resolve their own caps independently > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32 i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 5
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 0
        i32.const 0
        i32.load
        i32.const 1
        i32.add
        i32.store
        i32.const 0
        local.set 1
        block  ;; label = @3
          loop  ;; label = @4
            local.get 1
            i32.const 3
            i32.ge_s
            if  ;; label = @5
              br 2 (;@3;)
            end
            local.get 1
            i32.const 1
            i32.add
            local.set 1
            i32.const 4
            i32.const 4
            i32.load
            i32.const 1
            i32.add
            i32.store
            br 0 (;@4;)
          end
        end
        br 0 (;@2;)
      end
    end)
  (export "test" (func 0)))
"
`;

exports[`nested loops resolve their own caps independently > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "innerCounter": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "innerCounter",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "outerCounter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "outerCounter",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;

exports[`plain loop still stops at default cap of 1000 > if the generated AST, WAT and memory map match the snapshot 1`] = `
{
  "id": "loop",
  "lines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "loop",
        },
      ],
      "instruction": "module",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 0,
      "lineNumberBeforeMacroExpansion": 0,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
    {
      "arguments": [],
      "instruction": "loop",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 3,
      "lineNumberBeforeMacroExpansion": 3,
    },
    {
      "arguments": [
        {
          "isEndAddress": false,
          "referenceKind": "memory-reference",
          "scope": "local",
          "targetMemoryId": "counter",
          "type": "identifier",
          "value": "&counter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 4,
      "lineNumberBeforeMacroExpansion": 4,
    },
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 5,
      "lineNumberBeforeMacroExpansion": 5,
    },
    {
      "arguments": [
        {
          "isInteger": true,
          "type": "literal",
          "value": 1,
        },
      ],
      "instruction": "push",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 6,
      "lineNumberBeforeMacroExpansion": 6,
    },
    {
      "arguments": [],
      "instruction": "add",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 7,
      "lineNumberBeforeMacroExpansion": 7,
    },
    {
      "arguments": [],
      "instruction": "store",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 8,
      "lineNumberBeforeMacroExpansion": 8,
    },
    {
      "arguments": [],
      "instruction": "loopEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 9,
      "lineNumberBeforeMacroExpansion": 9,
    },
    {
      "arguments": [],
      "instruction": "moduleEnd",
      "isMemoryDeclaration": false,
      "isSemanticOnly": true,
      "lineNumberAfterMacroExpansion": 11,
      "lineNumberBeforeMacroExpansion": 11,
    },
  ],
  "memoryDeclarationLines": [
    {
      "arguments": [
        {
          "referenceKind": "plain",
          "scope": "local",
          "type": "identifier",
          "value": "counter",
        },
      ],
      "hasExplicitMemoryDefault": false,
      "instruction": "int",
      "isMemoryDeclaration": true,
      "isSemanticOnly": false,
      "lineNumberAfterMacroExpansion": 1,
      "lineNumberBeforeMacroExpansion": 1,
    },
  ],
  "moduleLine": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "loop",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  "referencedModuleIds": [],
  "type": "module",
}
`;

exports[`plain loop still stops at default cap of 1000 > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 0
        i32.const 0
        i32.load
        i32.const 1
        i32.add
        i32.store
        br 0 (;@2;)
      end
    end)
  (export "test" (func 0)))
"
`;

exports[`plain loop still stops at default cap of 1000 > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "counter": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "hasExplicitDefault": false,
    "id": "counter",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "memoryIndex": 0,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
}
`;
